feat : 동물소개 전체조회 로직 변경